fix sender's bubble word-wrapping

--- a/frontend/src/Components/MessageBubble/MessageBubble.module.css
+++ b/frontend/src/Components/MessageBubble/MessageBubble.module.css
@@ -54,7 +54,8 @@
   left: 20px;
   margin: 5px 0;
   max-width: 70vw;
-  word-break: break-all;
+  word-wrap: break-word;
+  white-space: pre-wrap;
   text-align: start;
 }
 .notMyBubble::before {
